--- a/public/css/index.css
+++ b/public/css/index.css
@@ -90,3 +90,17 @@ img {
     max-height: 60px;
     margin: 15px;
 }
+
+/*LOADER*/
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url("../images/Reload-1s-200px.gif") center no-repeat #fff;
+}
+
