--- a/public/css/index.css
+++ b/public/css/index.css
@@ -62,7 +62,7 @@ p, label {
     justify-content: center;
     align-items: center;
     margin: 10px auto;
-    min-width: 70%;
+    min-width: 80%;
     text-decoration: none;
     box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 13px 0 rgba(0,0,0,0.19);
 }
@@ -101,6 +101,10 @@ img {
 .clapImg {
     background: transparent;
     margin: 5px 20px;
+}
+
+.icon {
+    opacity: 45%;
 }
 
 .flagDiv {
