First attempt to creating a share button with the browsers native share + change in style and copy

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -65,6 +65,7 @@ p, label {
     min-width: 80%;
     text-decoration: none;
     box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 13px 0 rgba(0,0,0,0.19);
+    z-index: 100;
 }
 
 .fullWidth {
