--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,129 +1,202 @@
 * {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #f1feff;
-    font-size: 40px;
-    box-sizing: border-box;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #f1feff;
+  box-sizing: border-box;
 }
 
 body {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    width: 50%;
-}
-
-h2 {
-    color: #36c8b4;
-    font-size: 1.3rem;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 60%;
 }
 
 h3 {
-    color: #919191;
-    text-align: center;
+  color: #919191;
+  text-align: center;
+  font-size: 1.6rem;
+}
+
+h2 {
+  color: #36c8b4;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 p, label {
-    color: #919191;
-    text-align: center;
-    font-size: 0.7rem;
+  color: #919191;
+  text-align: center;
+  font-size: 1.2rem;
 }
 
 .button {
-    color: #36c8b4;
-    border: 5px solid #36c8b4;
-    border-radius: 10px;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px auto;
-    min-width: 80%;
-    text-decoration: none;
-    box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 13px 0 rgba(0,0,0,0.19);
-    z-index: 100;
+  cursor: pointer;
+  color: #36c8b4;
+  border: 5px solid #36c8b4;
+  border-radius: 10px;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px auto;
+  min-width: 80%;
+  text-decoration: none;
+  box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 13px 0 rgba(0,0,0,0.19);
+  z-index: 100;
+  font-size: 1.6rem;
+  transition: color .25s, background-color .25s, border .25s, box-shadow .25s;
 }
 
 .fullWidth {
-    width: 100%;
+  width: 100%;
 }
 
 .button:hover {
-    color: #f1feff;
-    background-color: #36c8b4;
-    border: 5px solid #919191;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: #f1feff;
+  background-color: #36c8b4;
+  border: 5px solid #919191;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 form {
-    display: inline-flex;
-    flex-direction: column;
+  display: inline-flex;
+  flex-direction: column;
 }
 
 input {
-    color: #36c8b4;
-    border: 5px solid #36c8b4;
-    border-radius: 10px;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-flex;
-    margin: 10px auto;
+  color: #36c8b4;
+  border: 5px solid #36c8b4;
+  border-radius: 10px;
+  padding: 15px 0;
+  text-align: center;
+  display: inline-flex;
+  margin: 10px auto;
+  width: 75%;
+  font-size: 1.4rem;
+}
+
+input[type="email"] {
+  background-color: white;
+}
+
+input::placeholder {
+  color: rgba(0,0,0,0.1);
+}
+
+input::-webkit-input-placeholder {
+  color: rgba(0,0,0,0.1);
+}
+
+input::-ms-input-placeholder {
+  color: rgba(0,0,0,0.1);
 }
 
 img {
-    max-width: 60px;
-    height: auto;
+  max-width: 40px;
+  height: auto;
 }
 
 .clapImg {
-    background: transparent;
-    margin: 5px 20px;
+  background: transparent;
+  margin : 0 10px;
 }
 
 .icon {
-    opacity: 45%;
+  opacity: 45%;
 }
 
 .flagDiv {
-    display: inline-flex;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
+  display: inline-flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .flagDivImg {
-    float: left;
-    max-height: 60px;
-    margin: 15px;
+  float: left;
+  max-height: 60px;
+  margin: 15px;
 }
 
 /*LOADER*/
 .no-js #loader { display: none;  }
 .js #loader { display: block; position: absolute; left: 100px; top: 0; }
 .se-pre-con {
-	position: fixed;
-	left: 0px;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	z-index: 9999;
-	background: url("../images/Reload-1s-200px.gif") center no-repeat #fff;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url("../images/Reload-1s-200px.gif") center no-repeat #fff;
 }
 
 footer p {
-    color: #919191;
-    background: transparent;
-    opacity: 70%;
-    font-size: 0.5rem; 
+  color: #919191;
+  background: transparent;
+  opacity: 70%;
+  font-size: 0.8rem;
+}
+
+@media (max-width: 449px) {
+  section {
+    width: 80%;
+  }
+
+  img {
+    max-width: 40px;
+  }
+
+  .button {
+    font-size: 1.4rem;
+  }
+
+  input {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 992px) {
+  section {
+    width: 50%;
+  }
+
+  h3 {
+    font-size: 2.6vw;
+  }
+
+  h2 {
+    font-size: 2.4vw;
+  }
+
+  p, label {
+    font-size: 2vw;
+  }
+
+  .button {
+    font-size: 2.6vw;
+  }
+
+  img {
+    max-width: 3.6vw;
+  }
+
+  footer p {
+    font-size: 1.2vw;
+  }
+
+  input {
+    font-size: 2vw;
+  }
 }
