--- a/public/css/index.css
+++ b/public/css/index.css
@@ -149,6 +149,19 @@ footer p {
   font-size: 0.8rem;
 }
 
+#toaster {
+  background-color: rgba(0,0,0,0.25);
+  color: white;
+  text-align: center;
+  border-radius: 5px;
+  padding: 16px;
+  position: fixed;
+  z-index: 101;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 30px;
+}
+
 @media (max-width: 449px) {
   section {
     width: 80%;
