fix: fix footer styles

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -144,9 +144,11 @@ img {
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
-  width: 100vw;
+  text-align:center;
+}
+
+footer img {
+  max-width: 64px;
 }
 
 footer p {
