--- a/public/css/index.css
+++ b/public/css/index.css
@@ -141,6 +141,9 @@ input::-ms-input-placeholder {
 }
 
 /*LOADER*/
+#loader{
+  width: 10vw;
+}
 .no-js #loader { display: none;  }
 .js #loader { display: block; position: absolute; left: 100px; top: 0; }
 .se-pre-con {
@@ -190,7 +193,8 @@ footer p {
   }
 
   .button {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
+    padding: 8px 15px;
   }
 
   input {
